--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,25 @@
-body {
+@import 'utils';
+@import 'fonts';
+@import './utils/blocks/page';
+@import './utils/blocks/header';
+@import './utils/blocks/icon';
+@import './utils/blocks/menu';
+@import './utils/blocks/schedule';
+@import './utils/blocks/performances';
+@import './utils/blocks/panorama';
+@import './utils/blocks/gallery';
+@import './utils/blocks/subscribe';
+@import './utils/blocks/footer';
+@import './utils//blocks/separator';
+@import './utils/blocks/nav';
+@import './utils/blocks/menu-open';
+
+* {
   margin: 0;
+  padding: 0;
+  text-decoration: none;
+  box-sizing: border-box;
+  list-style: none;
+  scroll-behavior: smooth;
+  scrollbar-color: $aside-background #fff;
 }
